- Reduce size of image and links in contact section to avoid text clipping through screen. - Adjust skills container dimensions for better looks and design. - Adjust the margins on the burger menu button. - Fix the margins of the about images and reduce font size of the text as well as change the hover animation. - Add hover animation to contact me button in the hero section, reduce floating image for mobile version and change text style in the description. - Add hover animation for the demo and source buttons in the projects section.

--- a/src/components/About/about.module.css
+++ b/src/components/About/about.module.css
@@ -38,17 +38,15 @@
     border-radius: 20px;
     list-style: none;
     padding: 25px;
-    background-image: linear-gradient(
-        90deg, 
-        rgba(165, 215, 232, 0.42)0%,
-        rgba(255, 255, 255, 0)100%
-    );
+    background-color: var(--color-bg);
     background-size: 0 100%;
-    background-repeat: no-repeat;
-    transition: 0.4s;
+    transition: 0.4s ease-in-out;
 }
 .aboutItem:hover{
+    background: white;
+    color: var(--color-secondary);
     background-size: 100% 100%;
+    transition: 0.4s ease-in-out;
 }
 .aboutItem h3{
     font-size: 25px;
@@ -79,5 +77,10 @@
     }
     .aboutItem img{
         margin-left: 10px;
+        margin-right: 10px;
+    }
+    .aboutItemText p{
+        font-size: 20px;
+        text-align: justify;
     }
 }
