--- a/src/components/NavBar/navbar.module.css
+++ b/src/components/NavBar/navbar.module.css
@@ -49,6 +49,7 @@
     .menuBtn{
         cursor: pointer;
         display: block;
+        margin-right: -20px;
     }
     .menuItems{
         display: none;
